--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "brotli": "^1.3.1",
     "eventemitter3": "1.x.x",
-    "requires-port": "1.x.x"
+    "iltorb": "^1.0.13",
+    "requires-port": "1.x.x",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "async": "*",
